--- a/package.json
+++ b/package.json
@@ -3,22 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "start": "cross-env NODE_ENV=development webpack-dev-server",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.10.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "moment": "^2.27.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.2",
+    "vuetify": "^2.0.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
+    "cross-env": "~5.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "html-loader": "^0.3.0",
+    "html-webpack-plugin": "~3.2",
+    "mini-css-extract-plugin": "~0.5",
+    "sass": "^1.25.0",
+    "sass-loader": "^7.3.1",
+    "vue-loader": "^15.9.2",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "~4.2"
   },
   "eslintConfig": {
     "root": true,
