--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.10.1",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2",
